--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "dependencies": {
     "@floating-ui/dom": "^1.2.5",
+    "@glidejs/glide": "^3.6.0",
     "autoprefixer": "^10.4.14",
     "motion": "^10.15.5",
     "postcss": "^8.4.21",
