--- a/data/footer.yml
+++ b/data/footer.yml
@@ -17,7 +17,7 @@ columns:
         link: https://teonite.com/blog/
       - target: blank
         text: Matrix
-        link: https://defguard.net/
+        link: https://matrix.to/#/#defguard:matrix.teonite.net
       - target: blank
         text: Twitter
         link: https://twitter.com/defguard_net
