Update Socials config “socialsData”

--- a/data/socials.yml
+++ b/data/socials.yml
@@ -7,4 +7,4 @@ links:
     link: https://twitter.com/defguard_net
   - icon: /images/decap/matrix-icon.svg
     name: Matrix
-    link: https://matrix.to/#/#defguard:matrix.teonite.net
+    link: https://matrix.to/#/#defguard:teonite.com
