--- a/data/navigation.yml
+++ b/data/navigation.yml
@@ -2,3 +2,6 @@ links:
   - target: blank
     text: Documentation
     link: https://defguard.gitbook.io/defguard/
+  - target: blank
+    text: Roadmap
+    link: https://defguard.gitbook.io/defguard/features/roadmap
